--- a/edu.css
+++ b/edu.css
@@ -7,7 +7,7 @@
      --font2:'Anek Devanagari', sans-serif;
 }
 header{
-     background: url('./library.jpg');
+     background: url('library.jpg');
      width: 100%;
      height: 70vh;
      background-position: center;
